--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "dotenv": "^16.3.1",
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
